--- a/backend/package.json
+++ b/backend/package.json
@@ -17,16 +17,12 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "method-override": "^3.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.2",
-    "multer": "^1.4.2",
     "ot": "0.0.15",
     "peer": "^0.6.1",
-    "react-bootstrap": "^1.4.0",
     "socket.io": "^4.0.0",
-    "ts-node": "^9.1.1",
-    "xlsx": "^0.16.8"
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
     "typescript": "^4.2.3",
