--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "codemirror": "^5.60.0",
     "framer-motion": "^4.1.3",
     "peerjs": "^1.3.2",
@@ -29,6 +30,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "simple-peer": "^9.11.0",
     "socket.io-client": "^4.0.1",
     "ssri": "^8.0.1",
     "typescript": "^4.1.3",
