--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.1",
+    "react-jitsi": "^1.0.4",
     "react-reflex": "^4.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
